# ChatServer

./: CMakeLists.txt  README.md  test.cpp
config/: db.json
include/: public.h
include/server/: ChatServer.h  ChatService.h
include/server/model/: Group.h  GroupModel.h  OfflineMsgModel.h  User.h
src/: CMakeLists.txt  public.h
src/client/: CMakeLists.txt  Client.cpp
src/dbpool/: ConnectionPool.cpp  ConnectionPool.h  MySQLConnectionPool.cpp  MySQLConnectionPool.h  MysqlConn.cpp  MysqlConn.h
src/net/: CMakeLists.txt  EPollPoller.cc
src/redispool/: RedisConn.cpp  RedisConn.h  RedisConnectionPool.cpp  RedisConnectionPool.h
src/server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatService.cpp  ChatService.h  Server.cpp  main.cpp
src/server/db/: db.cpp  db.h
src/server/model/: FriendModel.cpp  FriendModel.h  Group.cpp  Group.h  GroupModel.cpp  GroupUser.h  OfflineMsgModel.cpp  User.cpp  UserModel.cpp  UserModel.h
src/server/redis/: redis.cpp  redis.h
src/utils/: HvParse.cpp  HvParse.h  Log.h  nocopyable.h  singleton.h
test/: CMakeLists.txt  NetworkServiceTest.cpp  UserModelTest.cpp  queryGroupsTest.cpp
